CSS: squashed bug that stopped small @media query to work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ h3 {
 
 }
 
-@media only screen and (max-width: 1366px) {
+@media only screen and (min-width: 767px) {
 
     #question {
         padding-top: 135px;
